objects/Queue_Names__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store display configuration related to different queues</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check if the Queue Configuration is Active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Range_1_Color__c</fullName>
        <description>Gauge Color for range 1</description>
        <inlineHelpText>Gauge Color for range 1</inlineHelpText>
        <label>Count Range 1 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Range_1_End__c</fullName>
        <description>The end of range 1</description>
        <inlineHelpText>The end of range 1</inlineHelpText>
        <label>Count Range 1 End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Range_1_Start__c</fullName>
        <description>The start of range 1</description>
        <inlineHelpText>The start of range 1</inlineHelpText>
        <label>Count Range 1 Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Range_2_Color__c</fullName>
        <description>Gauge color for range 2</description>
        <inlineHelpText>Gauge color for range 2</inlineHelpText>
        <label>Count Range 2 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Range_2_End__c</fullName>
        <description>The end for range 2</description>
        <inlineHelpText>The end for range 2</inlineHelpText>
        <label>Count Range 2 End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Range_3_Color__c</fullName>
        <description>Gauge color for range 3</description>
        <label>Count Range 3 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>This field is used to store the sort order of queue names.</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field is used to store the title of queue name.</description>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to update the Assigned To on Case based on the value.</description>
        <label>Update Assigned To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zero_Count_Color__c</fullName>
        <description>Gauge color for zero count</description>
        <inlineHelpText>Gauge color for zero count</inlineHelpText>
        <label>Zero Count Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Queue Names</label>
</CustomObject>